5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1575_1332.log
== SUBMITION (2019-03-31 21:38:51) 
-- CODE:
from math import*
aresta =5
area = (3/2)*sqrt(3*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.200866
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:38:54) 
-- CODE:
from math import*
aresta =5
area = (3/2)*sqrt(3*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:39:04) 
-- CODE:
from math import*
aresta =5
area = (3/2)*sqrt(3*5**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.173461
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:39:07) 
-- CODE:
from math import*
aresta =5
area = (3/2)*sqrt(3*5**2)
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:41:12) 
-- CODE:
from math import*
aresta =5
area = (3/2)*sqrt(3*(5**2))
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:41:17) 
-- CODE:
from math import*
aresta =5
area = (3/2)*sqrt(3*(5**2))
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:41:19) 
-- CODE:
from math import*
aresta =5
area = (3/2)*sqrt(3*(5**2))
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:42:30) 
-- CODE:
aresta =5
area = (3/2)*(3*(5**2))**1/2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:42:38) 
-- CODE:
aresta =5
area = (3/2)*(3*(5**2))**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.208352
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:43:28) 
-- CODE:
aresta =5
area = (3/2)*(3*(5**2))**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:43:34) 
-- CODE:
aresta =5
area = (3/2)*(3*(5**2))**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.13578
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:46:17) 
-- CODE:
aresta =5
area = (3/2)*(3*(aresta**2))**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.1805
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:46:19) 
-- CODE:
aresta =5
area = (3/2)*(3*(aresta**2))**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:46:34) 
-- CODE:
aresta =5
area = (3//2)*(3*(aresta**2))**0.5
 
print(round(area, 4))
-- OUTPUT:
8.6603
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:46:38) 
-- CODE:
aresta =5
area = (3//2)*(3*(aresta**2))**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.15231
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
8.6603
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:46:49) 
-- CODE:
aresta =5
area = (3/2)*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:46:52) 
-- CODE:
aresta =5
area = (3/2)*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.203366
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:47:03) 
-- CODE:
aresta =5
area = (3/2)*(3)*(aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:47:04) 
-- CODE:
aresta =5
area = (3/2)*(3)*(aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:47:07) 
-- CODE:
aresta =5
area = (3/2)*(3)*(aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.17209
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:47:51) 
-- CODE:
aresta =5
area = (3/2)*(3*(aresta**2))**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:51:24) 
-- CODE:
aresta =5
area = (3/2)*(3*(5**2))**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:51:25) 
-- CODE:
aresta =5
area = (3/2)*(3*(5**2))**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:51:25) 
-- CODE:
aresta =5
area = (3/2)*(3*(aresta**2))**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.196204
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:51:58) 
-- CODE:
aresta =5
area = (3/2)*3*(aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:53:06) 
-- CODE:
aresta =5
area = (3/2)*((3*(aresta**2)**0.5)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:53:21) 
-- CODE:
aresta =5
area = (3/2)*(3*(aresta**2)**0.5)
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:54:04) 
-- CODE:
aresta =5
area = (3/2)*(3*((aresta**2)**0.5)) 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:54:21) 
-- CODE:
aresta =5
area = (3/2)*3*(aresta**2)**0.5
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:54:39) 
-- CODE:
aresta =5
area = (3/2)*(3*(aresta**2))**0.5
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:54:55) 
-- CODE:
aresta =4
area = (3/2)*(3*(aresta**2))**0.5
print(round(area, 4))
-- OUTPUT:
10.3923
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:55:08) 
-- CODE:
aresta = 5
area = (3/2)*(3*(aresta**2))**0.5
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:55:40) 
-- CODE:
aresta = 5
area = (3/2)*(3*(aresta**2))**0.5
print(round(area, 4))
-- EXECUTION TIME:
0.133896
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:56:15) 
-- CODE:
aresta = 5
area = (3/2)*(3*(aresta**2))**1/2
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:56:15) 
-- CODE:
aresta = 5
area = (3/2)*(3*(aresta**2))**1/2
print(round(area, 4))
-- EXECUTION TIME:
0.149486
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:56:29) 
-- CODE:
aresta = 5
area = (3/2)*(3*(aresta**2))**1/2
print(round(area, 4))
-- EXECUTION TIME:
0.225632
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:59:23) 
-- CODE:
aresta = 5
area = (3/2)*(3**1/2)*(aresta**2)
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:59:26) 
-- CODE:
aresta = 5
area = (3/2)*(3**1/2)*(aresta**2)
print(round(area, 4))
-- EXECUTION TIME:
0.127649
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:59:50) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5)*(aresta**2)
print(round(area, 4))
-- EXECUTION TIME:
0.155898
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
